Added code files from subdir

--- a/intro.tex
+++ b/intro.tex
@@ -25,16 +25,16 @@ To test the susceptibility of thermocouple sensors to electromagnetic vulnerabil
 \end{split}
 \qquad
 \begin{split}
-\varepsilon - Electromotive force\\
-{\Phi _{B}} - magnetic flux\\
-N - number of coil turns
+\varepsilon \text{- Electromotive force}\\
+{\Phi _{B}} \text{- magnetic flux}\\
+N \text{- number of coil turns}
 \end{split}
 \end{equation}
 
 \begin{figure}[h]
     \centering
     \includegraphics[width=\linewidth]{pictures/FLaw.png}
-    \caption{Basic transformer (function by applying Faraday law of induction) \cite{Flap96}}
+    \caption{Basic transformer (functions by applying Faraday\textquotesingle s law of induction) \cite{Flap96}}
     \label{fig:Transformer}
 \end{figure}
 
