--- a/sources.bib
+++ b/sources.bib
@@ -236,3 +236,11 @@ eprint = {
   url =          "https://www.maximintegrated.com/en/app-notes/index.mvp/id/6550",
   lastaccessed = "November 21, 2018",
 }
+
+@online{Flap96,
+  author =       "FLAP",
+  year =         "1996",
+  title =        "The Basics of Thermocouples",
+  url =          "https://www.maximintegrated.com/en/app-notes/index.mvp/id/6550",
+  lastaccessed = "November 21, 2018",
+}
