--- a/sources.bib
+++ b/sources.bib
@@ -238,9 +238,9 @@ eprint = {
 }
 
 @online{Flap96,
-  author =       "FLAP",
+  author =       "FLAP: The University of Reading",
   year =         "1996",
-  title =        "The Basics of Thermocouples",
-  url =          "https://www.maximintegrated.com/en/app-notes/index.mvp/id/6550",
-  lastaccessed = "November 21, 2018",
+  title =        "Electromagnetic induction",
+  url =          "http://www.met.reading.ac.uk/pplato2/h-flap/phys4_4.html",
+  lastaccessed = "November 19, 2018",
 }
