--- a/tc_model2.tex
+++ b/tc_model2.tex
@@ -2,9 +2,10 @@
 
 \usepackage{amsmath, amssymb, graphics, setspace}
 
+\section{Steady State Model Derivation}\label{steady-state-model-code}
+
 \begin{doublespace}
-\noindent\(\pmb{\text{data} = \text{Flatten}[\text{Import}[\text{{``}G:$\backslash \backslash $Team Drives$\backslash \backslash $ECE 5560 Fall 2018$\backslash
-\backslash $tc$\_$output$\backslash \backslash $tc2.csv{''}},\text{{``}Data{''}}]]}\)
+\noindent\(\pmb{\text{data} = \text{Flatten}[\text{Import}[\text{{``}tc2.csv{''}},\text{{``}Data{''}}]]}\)
 \end{doublespace}
 
 \begin{doublespace}
