Pulled changes from github and merged them

--- a/code.tex
+++ b/code.tex
@@ -4,14 +4,14 @@
 
 \subsection{Header file for simulator}
 \label{thermocouple-simulator-h}
-\lstinputlisting[language={[GNU]C++}]{tc-volt-check/tc_sim.h}
+\lstinputlisting[language={[GNU]C++}]{code/tc_sim.h}
 
 \subsection{Controller code for protecting thermocouple readings}
 \label{thermocouple-controller}
-\lstinputlisting[language={[GNU]C++}]{tc-volt-check/tc_volt.cpp}
+\lstinputlisting[language={[GNU]C++}]{code/tc_volt.cpp}
 
 \subsection{Simulator for generating attacked Thermocouple values}
 \label{thermocouple-simulator}
-\lstinputlisting[language={[GNU]C++}]{tc-volt-check/tc_sim.cpp}
+\lstinputlisting[language={[GNU]C++}]{code/tc_sim.cpp}
 
 \twocolumn
