--- a/main.tex
+++ b/main.tex
@@ -6,6 +6,7 @@
 \usepackage{hyperref}
 \usepackage{graphicx}
 \usepackage{caption}
+\usepackage{amsmath, amssymb, graphics, setspace}
 
 \usepackage[nameinlink]{cleveref}
 \crefformat{figure}{#2(fig. #1)#3}
