Updates from ShareLaTeX

--- a/intro.tex
+++ b/intro.tex
@@ -17,7 +17,7 @@ To discuss cybersecurity of any system, we must understand its architecture. Thr
 
 Thermocouple is an electric device that utilizes Seebeck effect to measure temperatures at the junction of two dissimilar metals/wires (\cref{fig:Thermocouple}). No power consumption, cost-effectiveness and reasonable accuracy makes K-type thermocouples industry-standard temperature-measuring method \cite{Duff10}. Unfortunately, due to microvolt-level signal changes (~40$\mu$V/\textdegree{}C in K-type), thermocouples are quite susceptible to \ac{emi}/\ac{rfi} \cite{Smalcerz2013,Astm93}. \ac{emi} in this case is any undesirable effects of electromagnetic, electric and magnetic fields, which can degrade the quality of the system due to distortion of the useful signal \cite{Getz96}. This means that without proper physical protection or signal filtering (analog and/or digital) such sensors can be vulnerable to stray noise or a range of intended physical attacks. While proper shielding and dedicated filters can greatly reduce such interference, they can also make an otherwise cheap and robust sensors quite costly and complex. 
 
-\subsubsection{Electromagnetic vulnerabilities}
+\subsection{Electromagnetic vulnerabilities}
 
 To test the susceptibility of thermocouple sensors to electromagnetic vulnerabilities, we experimented with one of the possible physical attacks - inducing voltage in the thermocouple wires. Generally, there are two ways in which electromagnetic fields can significantly skew the thermocouple readings: ``induction heating of the thermoelements and induced voltage in the thermocouple wires'' \cite{Omega17}. Heat induction happens at very high amplitudes or high frequencies, when induced currents from alternating magnetic field heat the thermoelement itself, thus affecting the measurement readings. Inducing voltage in thermocouple wires on the other hand, does not require a large field to make any alteration to the temperature output. Since thermocouples measure microvolt-level signal changes, inducing even a small voltage in thermocouple wires can affect the accuracy of the readings. Electromagnetic induction in this case can be explained using Faraday's law of induction \cref{fig:Thermocouple}, which states that ``induced electromotive force (i.e. voltage) in any closed circuit is equal to the rate of change of the magnetic flux enclosed by the circuit'' \cite{Jordan68}. 
 
